tests/semantic/invalid/type_mismatch/test2.src
// Invalid: type mismatch — float to int narrowing
fn main() -> int {
    float f = 3.14;
    int x = f;
    return x;
}
